--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,92 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap');
+
+:root {
+  --primary: #004dba;
+  --secondary: #151515;
+  --text-color: #333;
+  --text-dim: #aaa;
+  --error: #ff2b40;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Raleway', sans-serif;
+  color: var(--text-color);
+}
+
+/* Navbar Styles */
+.navbar {
+  display: flex;
+  align-items: center;
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 30px 20px;
+  border-bottom: 1px solid #f2f2f2;
+}
+
+.navbar h1 {
+  color: var(--primary);
+}
+
+.navbar .links {
+  margin-left: auto;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: var(--text-dim);
+  margin-left: 25px;
+  padding: 6px;
+}
+
+.navbar a:hover {
+  background-color: var(--secondary);
+  color: #fff;
+  border-radius: 8px;
+}
+
+
+
+/* Page Styles */
+.content {
+  max-width: 900px;
+  margin: 20px auto;
+  padding: 20px;
+}
+
+/* Blog Preview */
+.blog-list {
+  margin: 20px 0px;
+  padding: 10px 16px;
+  border-left: 5px solid var(--primary);
+}
+
+.blog-list:hover {
+  box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+}
+
+.blog-list h2 {
+  font-size: 22px;
+  color: var(--text-color);
+  margin-bottom: 8px;
+}
+
+.blog-list p {
+  color: var(--text-dim);
+}
+
+/* error container*/
+.error-container {
+  padding: 10px;
+  background: #ffefef;
+  border: 1px solid var(--error);
+  color: var(--error);
+  border-radius: 4px;
+  margin: 20px 0;
+  font-size: 0.8em;
 }
